--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
+
 .menu{
 	display: flex;
 	justify-content: space-between;
 	width: 400px;
 	list-style: none;
+	margin-top: 20px;
+   
 }
 .menu-item{
 	color:white;
 	text-transform:uppercase;
-	font-size: 13px;	
+	font-size: 13px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 
 .div-header{
 	display: flex;
 	justify-content: space-between;
+
 
 }
 .my-header{
@@ -26,6 +31,11 @@
 
 }
 
+
+.header-img{
+	margin-top: 20px;
+	margin-left: 20px;
+}
 .title{
 	margin-top: 633px;
 	color: white;
@@ -83,13 +93,10 @@
 
 }
 
-.my-section{
+.my-section {
 	display: flex;
-    justify-content: center;
-    background: #a2ca28;
-    
-
-
+	width: 1093px;
+	margin: 0 auto;
 }
 
 .my-div{
@@ -108,4 +115,8 @@
 	font-size: 14px;
 	text-transform: capitalize;
 
+}
+
+.main-block{
+	background: #a2ca28;
 }
